[package]
name = "fission-pcode"
version = "0.1.0"
edition = "2024"
authors = ["Fission Dev Team"]
description = "P-code IR and optimizer for Fission decompiler"
repository = "https://github.com/sjkim1127/Fission"
license = "AGPL-3.0-or-later"
keywords = ["ir", "pcode", "optimizer", "decompiler"]
categories = ["development-tools"]

[dependencies]
fission-core = { path = "../fission-core" }
fission-loader = { path = "../fission-loader" }
fission-signatures = { path = "../fission-signatures" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
metrics = "0.24"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"
lru = "0.16"
once_cell = "1.19"
rustc-hash = "2.1"
indexmap = "2"

[dev-dependencies]
criterion = "0.5"
insta = "1.47"
petgraph = "0.6"
