[package]
name = "fission-pcode"
version = "0.1.6"
edition = "2024"
authors = ["Fission Dev Team"]
description = "P-code IR and optimizer for Fission decompiler"
repository = "https://github.com/fission-systems/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
keywords = ["ir", "pcode", "optimizer", "decompiler"]
categories = ["development-tools"]

[dependencies]
fission-core = { path = "../fission-core" }
fission-loader = { path = "../fission-loader" }
fission-midend-core = { path = "../fission-midend-core" }
fission-midend-dir = { path = "../fission-midend-dir" }
fission-midend-normalize = { path = "../fission-midend-normalize" }
fission-midend-structuring = { path = "../fission-midend-structuring" }
fission-signatures = { path = "../fission-signatures" }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
metrics = "0.24"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"
lru = "0.16"
once_cell = "1.21"
rustc-hash = "2.1"
indexmap = "2"

[dev-dependencies]
criterion = "0.5"
insta = { version = "1.47", features = ["yaml"] }
petgraph = "0.8"
fission-sleigh = { path = "../fission-sleigh" }
fission-static = { path = "../fission-static" }
