[package]
name = "fission-serve"
version = "0.1.0"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Fission decompilation server — multi-user HTTP API (Ghidra Server-style)"
repository = "https://github.com/fission-systems/Fission"
license = "AGPL-3.0-or-later"

[lib]
name = "fission_serve"
path = "src/lib.rs"

[[bin]]
name = "fission-serve"
path = "src/bin/main.rs"

[dependencies]
fission-loader     = { path = "../fission-loader" }
fission-decompiler = { path = "../fission-decompiler" }
fission-static     = { path = "../fission-static" }

axum           = { version = "0.8", features = ["multipart"] }
tower-http     = { version = "0.6", features = ["cors"] }
tokio          = { version = "1", features = ["full"] }
uuid           = { version = "1", features = ["v4", "serde"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow         = "1"
clap           = { version = "4.5", features = ["derive", "env"] }
