[package]
name = "fission-signatures"
version = "0.1.2"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Function signature database for Fission"
repository = "https://github.com/sjkim1127/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
keywords = ["signatures", "windows-api", "msvc"]
categories = ["development-tools"]

[dependencies]
fission-core = { path = "../fission-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
flate2 = "1.1"
log = "0.4"
once_cell = "1.21"
regex = "1.12"
quick-xml = "0.41"

[dev-dependencies]
criterion = "0.5"
