[package]
name = "fission-sleigh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
fission-core = { path = "../fission-core" }
fission-pcode = { path = "../fission-pcode" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1"

[dev-dependencies]
fission-loader = { path = "../fission-loader" }
tempfile = "3.23.0"
