[package]
name = "fission-sleigh"
version = "0.1.0"
edition = "2021"
authors = ["Fission Dev Team"]
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.102"
fission-core = { path = "../fission-core" }
fission-pcode = { path = "../fission-pcode" }
flate2 = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1"
libloading = "0.8"

[dev-dependencies]
fission-loader = { path = "../fission-loader" }
tempfile = "3.23.0"
