[package]
name = "fission-sleigh"
version = "0.1.0"
edition = "2021"
authors = ["Fission Dev Team"]
description = "Ghidra Sleigh compiler/runtime integration for Fission"
repository = "https://github.com/sjkim1127/Fission"
license = "AGPL-3.0-or-later"
readme = "../../README.md"
keywords = ["sleigh", "ghidra", "disassembly", "fission"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.102"
fission-core = { path = "../fission-core" }
fission-pcode = { path = "../fission-pcode" }
flate2 = "1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1"
libloading = "0.9"
bincode = "3.0"
rkyv = { version = "0.7.46", features = ["validation", "size_32"] }
memmap2 = "0.9"

[dev-dependencies]
fission-loader = { path = "../fission-loader" }
fission-static = { path = "../fission-static" }
tempfile = "3.23.0"
