[package]
name = "fission-tui"
version = "0.1.0"
edition = "2024"
authors = ["Fission Dev Team"]
license = "AGPL-3.0-or-later"
description = "Interactive TUI chat interface for Fission AI"
repository = "https://github.com/sjkim1127/Fission"

[[bin]]
name = "fission_tui"
path = "src/main.rs"

[dependencies]
fission-ai = { path = "../fission-ai" }
fission-core = { path = "../fission-core" }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
pulldown-cmark = { version = "0.12", default-features = false }
dirs = "6"
rusqlite = { version = "0.40.1", features = ["bundled"] }
chrono = "0.4.45"
syntect = "5.3.0"
