[package]
name = "fission-ui"
version = "0.1.0"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Fission GUI"
license = "MIT"
repository = "https://github.com/sjkim1127/Fission"

[lib]
name = "fission_ui"
path = "src/lib.rs"
test = false

[dependencies]
fission-core = { path = "../fission-core" }
fission-analysis = { path = "../fission-analysis" }
eframe = "0.29"
egui = "0.29"
rfd = "0.15"
egui_extras = { version = "0.29", features = ["all_loaders"] }
crossbeam-channel = "0.5"
regex = "1.10"
tokio = { version = "1.36", features = ["full", "rt-multi-thread"] }
lru = "0.12"
sysinfo = "0.37.2"

[features]
default = ["native_decomp"]
native_decomp = ["fission-analysis/native_decomp"]
python = ["fission-analysis/python"]
