[package]
name = "fission-ui"
version = "0.1.6"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Shared Dioxus UI components for Fission (desktop + web)"

[lib]
name = "fission_ui"
crate-type = ["rlib"]

[dependencies]
dioxus = { version = "0.7" }
tracing = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
fission-core = { path = "../fission-core" }
fission-loader = { path = "../fission-loader" }
fission-static = { path = "../fission-static" }
fission-decompiler = { path = "../fission-decompiler" }
fission-signatures = { path = "../fission-signatures" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
